log
Thu 11 May 2023 04:27:36 PM UTC: 
 tests:  0|4
total_score: 0/70
e02fcc8
Thu 11 May 2023 04:34:28 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
f2e6353
Thu 11 May 2023 04:34:49 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d47e41d
Thu 11 May 2023 04:35:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:7: error: ‘dato’ is a pointer; did you mean to use ‘->’?
   39 |   dato.size = 0;
      |       ^
      |       ->
Compilation failed
423b208
Thu 11 May 2023 04:35:32 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3261fd4
Thu 11 May 2023 04:36:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:24: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   22 |    return pq->heapArray->priority;
      |           ~~~~~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7d42db1
Thu 11 May 2023 04:36:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4cf77a6
Thu 11 May 2023 04:37:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:27: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |    return pq->heapArray[0]->data;
      |                           ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fb5aad2
